SFDC Automation/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ANVR_CARD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anniversary Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANVR_DATE__c</fullName>
        <description>Anniversary Date</description>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASST_PHONE_EXTN__c</fullName>
        <description>Assistant Phone Extension</description>
        <label>Assistant Phone Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_ID_For_MA__c</fullName>
        <formula>Account.OwnerId</formula>
        <label>Account Owner ID For MA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name_for_MA__c</fullName>
        <formula>Account.Owner_Copy__r.FirstName  &amp; &apos; &apos; &amp;  Account.Owner_Copy__r.LastName</formula>
        <label>Account Owner Name for MA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Cont_Inactive_ChAcct_MTP_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact marked as inactive due to original child account it belonged was inactive and contact was being moved to parent as part of move to parent system changes cleanup</description>
        <label>Active Cont Inactive ChAcct MTP Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Added_As_Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added As Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>field to capture comments at the item of customer needs selection.</description>
        <inlineHelpText>field to capture comments at the item of customer needs selection.</inlineHelpText>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Available_24_7__c</fullName>
        <description>Indicate if this Contact is available to contact at all hours of the day.</description>
        <inlineHelpText>Indicate if this Contact is available to contact at all hours of the day.</inlineHelpText>
        <label>Available 24/7?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <picklist>
            <controllingField>Available_24_7__c</controllingField>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_To__c</fullName>
        <label>Available To</label>
        <picklist>
            <controllingField>Available_24_7__c</controllingField>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BUSS_PHONE1_EXTN__c</fullName>
        <description>Business Phone Extension 1</description>
        <label>Phone Extension 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSS_PHONE2_EXTN__c</fullName>
        <description>Business Phone Extension 2</description>
        <label>Phone Extension 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSS_PHONE2__c</fullName>
        <label>Business Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Extension_1__c</fullName>
        <label>Business Phone Extension 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Buying_Behavior__c</fullName>
        <inlineHelpText>BELIEVER: Currently use FSL
FENCE SITTER: Open to FSL, but demand more value to implement
SKEPTIC: Has a negative bias against FSL, could be open with a significant value shift.
DENIER:  Will never use FSL and does not see any value from the offering.</inlineHelpText>
        <label>Buying Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Believer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fence Sitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skeptic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CELL__c</fullName>
        <description>Cell Phone</description>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CHILDREN_DESC__c</fullName>
        <description>Children Description</description>
        <label>Children Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COA_CARD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>COA Card</description>
        <label>Change of Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COLLEGE__c</fullName>
        <description>College</description>
        <label>College</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CO_ID__c</fullName>
        <description>Company ID</description>
        <label>Company ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Contact_Type__c</fullName>
        <label>CSI Contact - All Branches</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CT_NICK_NAME__c</fullName>
        <description>Contact Nick Name</description>
        <label>Contact Nick Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Opt_Out_Reason__c</fullName>
        <label>Call Opt Out Reason</label>
        <picklist>
            <controllingField>DoNotCall</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Be_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connection__IC_DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not call from IC</description>
        <label>IC Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__IC_LastContact__c</fullName>
        <description>Last Time contacted with IntelliConnection</description>
        <inlineHelpText>Last Time contacted with IntelliConnection</inlineHelpText>
        <label>IC Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__IC_Last_Disposition__c</fullName>
        <label>IC Last Disposition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <description>This field tells if the contact is created by lead convesion process or manually by clicking new contact button.</description>
        <label>Contact Source</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Trigger Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Post Sales Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>After Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.O. Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsorship Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_for_Corporate_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact for Corporate Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Contact__c</fullName>
        <formula>HYPERLINK(&quot;https://cs4.salesforce.com/003/e?retURL=%2F003%2Fo&quot;, &quot;Create a New Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create New Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_CARD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DOB Card</description>
        <label>DOB Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUP_FLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duplicate Flag</description>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUP_GROUP_NO__c</fullName>
        <description>Duplicate Group Number</description>
        <label>Duplicate Group Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUP_PROCESSED_BY__c</fullName>
        <description>Duplicate Processed By</description>
        <label>Duplicate Processed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUP_PROCESSED_DATE__c</fullName>
        <description>Duplicate Processed Date</description>
        <label>Duplicate Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUP_UPD_DATE__c</fullName>
        <description>Duplicate Update Date</description>
        <label>Duplicate Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>D&amp;B</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations- Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R and D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>E-Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Does_Not_Exist_Reason__c</fullName>
        <description>Dependent on Email Does Not Exist Flag</description>
        <inlineHelpText>Select a reason you have not entered an Email Address.</inlineHelpText>
        <label>Email Does Not Exist Reason</label>
        <picklist>
            <controllingField>Email_does_not_exist__c</controllingField>
            <picklistValues>
                <fullName>Contact has no e-mail address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact doesnt want to share e-mail address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I will update later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Reason__c</fullName>
        <label>Email Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutOfEmail</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_does_not_exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Email Exist</description>
        <label>Email does not exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for the enterprise team to indicate which is the enterprise contact that they will be dealing with</description>
        <label>Enterprise Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out_Reason__c</fullName>
        <label>Fax Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutOfFax</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HOBBIES__c</fullName>
        <description>Hobbies</description>
        <label>Hobbies</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HOME_ADD_ID__c</fullName>
        <description>Home Address ID</description>
        <label>Home Address ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Account_ID__c</fullName>
        <description>Used to place the approrpriate account ID to allow for Key Contact Filter contraint</description>
        <formula>BLANKVALUE(Account.Parent.Id, Account.Id)</formula>
        <label>HQ Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Account_Id_18__c</fullName>
        <formula>HQ_Account_ID__c 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(HQ_Account_ID__c,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(HQ_Account_ID__c,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(HQ_Account_ID__c,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(HQ_Account_ID__c,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(HQ_Account_ID__c,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(HQ_Account_ID__c,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(HQ_Account_ID__c,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(HQ_Account_ID__c,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(HQ_Account_ID__c,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(HQ_Account_ID__c,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(HQ_Account_ID__c,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(HQ_Account_ID__c,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(HQ_Account_ID__c,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(HQ_Account_ID__c,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Account Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutofMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutofSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Indicator__c</fullName>
        <description>This field is currently used to map to a isell only field to indicate the source of the contact as isell. This field is generically named so it can be resued with any other thrid party integrated source.</description>
        <label>Integration Indicator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the hard bounce Emails from Eloqua matches the SFDC email.</description>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailExists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Email Exist</description>
        <label>Does Email Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Rank__c</fullName>
        <label>Job Rank</label>
        <picklist>
            <picklistValues>
                <fullName>-- None --</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOC_ID__c</fullName>
        <description>Location ID</description>
        <label>Location ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Feedback_received_on__c</fullName>
        <label>Last Feedback received on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_for_MA__c</fullName>
        <formula>if( LastModifiedDate &gt; if( Account.LastModifiedDate &gt;=    BLANKVALUE(Account.Parent.LastModifiedDate, Account.LastModifiedDate)  , Account.LastModifiedDate, BLANKVALUE(Account.Parent.LastModifiedDate, Account.LastModifiedDate)), LastModifiedDate, if( Account.LastModifiedDate &gt;=    BLANKVALUE(Account.Parent.LastModifiedDate, Account.LastModifiedDate)  , Account.LastModifiedDate, BLANKVALUE(Account.Parent.LastModifiedDate, Account.LastModifiedDate)))</formula>
        <label>Last Modified Date for MA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_Id__c</fullName>
        <description>Used for data migration 1/5/11</description>
        <externalId>true</externalId>
        <label>Legacy Contact Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_Date__c</fullName>
        <description>For retaining history from CIM</description>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Id__c</fullName>
        <label>Legacy Owner Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARCOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MARCOM</label>
        <referenceTo>Marketing_Deliverable__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out_Reason__c</fullName>
        <label>Mail Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutofMail__c</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Last_Updated__c</fullName>
        <label>Mailing Address Last Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>